# modular-governance

./: package.json
programs/nft_voter/: Cargo.toml
programs/nft_voter/src/instructions/: initialize_nft_voter_v0.rs  vote_v0.rs
programs/organization/: Cargo.toml
programs/organization/src/instructions/: initialize_organization_v0.rs
programs/organization_wallet/: Cargo.toml
programs/organization_wallet/src/instructions/: initialize_organization_wallet_v0.rs  set_transactions_v0.rs
programs/proposal/: Cargo.toml
programs/proposal/src/instructions/: initialize_proposal_config_v0.rs  initialize_proposal_v0.rs
programs/state_controller/: Cargo.toml
programs/state_controller/src/instructions/: initialize_resolution_settings_v0.rs
programs/token_voter/: Cargo.toml
programs/token_voter/src/instructions/: deposit_v0.rs  initialize_token_voter_v0.rs  vote_v0.rs
programs/vote_hook_interface/: Cargo.toml
