[package]
name = "organization"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "organization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = { version = "0.30.0" }
anchor-spl = { version = "0.30.0" }
proposal = { path = "../proposal", features = ["no-entrypoint", "cpi"] }

